08Jun01=======================================================================
1. first cut with new routing code. Created NEW_ROUTE branch
2. added acc/route and rej/route commands
3. added stat/route_node and stat/route_user commands to look at the routing
table entities
07Jun01=======================================================================
1. move userconfig.pl and nodeconfig.pl to stat/
2. fix problem with locally connected users not being removed from the 
routing tables
3. Fix the build calc to take into account subdirectories
06Jun01=======================================================================
1. add stat/route_node and stat/route_user commands
2. add sh/userconfig command (to show backward links to nodes)
3. add sh/nodeconfig command
05Jun01=======================================================================
1. add set/bbs command
2. more work on Routing code.
3. status/msg on its own will print the status of the msg system.
4. add sh/newconfig command
03Jun01=======================================================================
1. Fix the problem with ExtMsg and unresolvable IP addresses, hopefully
properly this time.
15May01=======================================================================
1. set/lockout now prevents any outgoing connection taking place.
2. Started the new routing stuff which will run in parallel for a while.
3. changed the msg timeout arrangements so that it might not get stuck so
easily.
4. add $DXMsg::bulltopriv global to make msgs to known callsigns private 
14May01=======================================================================
1. fix problem with re-reading in db definitions for remote databases.
2. try to prevent situations where two can (semi) successfully login, probably
under load, and get a 'tried to connect whilst already connected' abort.
3. change the max number of days to search for spots to 100
11May01=======================================================================